--- a/source/_posts/备案之路.md
+++ b/source/_posts/备案之路.md
@@ -7,6 +7,7 @@ tags:
 
 
 是的, 你没看错, 我的域名`waydrow.com`正在备案中. 其实一开始我是完全没有备案这个想法的, 因为用的是github托管的静态博客, 也没有必要.
+<!-- more -->
 但是最近买了个阿里云服务器(不会告诉你我是因为这个可以报销才买的2333), 当然了, 云翼计划, 9.9...
 土豪求不嘲讽, 40G硬盘应该够我玩的了, 装的是`CentOS 6.5`, 好吧, `Linux`的大门一直向我敞开着.
 当我想把我的域名和我的服务器绑上时,
